com.sun.java.swing.plaf.windows is required only on Windows platform